# hpx-musings

resource_partitioner_tests/: CMakeCache.txt  CMakeLists.txt  Makefile  RP.cbp  cmake_install.cmake  experiment.cpp  main.cpp  main_simple_default.cpp  main_withcmdline_defaultpool.cpp  scratch.cpp  system_characteristics.h  test_functions.h
rm_experiment/: CMakeLists.txt  resource_manager.cpp  resource_manager.h  system_characteristics.h
runtime/: CMakeCache.txt  CMakeLists.txt  ExploreRuntime.cbp  Makefile  cmake_install.cmake  main.cpp
turtle/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  expected_output.txt  expected_output_N=4.txt  turtle-main.cpp  turtle.cbp
